<resources>
    <string name="app_name">RecomCaribe</string>
    <string name="app_name2">app</string>
    <string name="login">Login</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="registrate_text">Registrar</string>
    <string name="email">Correo</string>
    <string name="Confirmar_email">Confirmar Correo</string>
    <string name="registrar">Registrar</string>
    <string name="title_activity_menu__principal">Menu_Principal</string>
    <string name="change_password">Cambiar Contraseña</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="new_password">Nueva Contraseña</string>
    <string name="confirm_new_password">Confirmar Nueva Contraseña</string>
    <string name="confirm">Confirmar</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ver_mas_sitios">Ver mas sitios</string>
    <string name="buscar_sitios_por_clasificacion">Buscar sitios por clasificacion</string>
    <string name="sitios_puntuados">Sitios Puntuados</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
</resources>
