<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="edgaryasociados.recomendacion.MainActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/imagen_fondo_login"
            android:scaleType="centerCrop"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="32dp"
                android:text="@string/registrar"
                android:textColor="#FFFFFF"
                android:textSize="50dp" />


            <EditText
                style="@style/editText_Style"
                android:id="@+id/userEditText"
                android:drawableLeft="@drawable/ic_usuario"
                android:hint="@string/user"
                android:inputType="text"/>

            <EditText
                style="@style/editText_Style"
                android:id="@+id/passwordEditText"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/ic_password"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <EditText
                style="@style/editText_Style"
                android:id="@+id/passwordEditText2"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/ic_password"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"/>

            <EditText
                style="@style/editText_Style"
                android:id="@+id/emailEdit"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/ic_mail"
                android:hint="@string/email"
                android:inputType="text"/>

            <EditText
                style="@style/editText_Style"
                android:id="@+id/emailEdit2"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/ic_mail"
                android:hint="@string/Confirmar_email"
                android:inputType="text" />

            <Button
                style="@style/button_Style"
                android:layout_marginTop="16dp"
                android:onClick="onLogin"
                android:layout_gravity="center"
                android:text="@string/login"
                android:layout_alignParentBottom="true"
                android:layout_width="335dp"
                android:layout_height="wrap_content" />


        </LinearLayout>



    </RelativeLayout>
</ScrollView>