<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.android.fusion_tesis.UI.Actividad_Registro">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/fondo2"
            android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="16dp"
                android:paddingBottom="32dp"
                android:text="@string/registrar"
                android:textColor="#FFFFFF"
                android:textSize="50dp" />


            <EditText
                style="@style/editText_Style"
                android:id="@+id/oldPasswordEditText"
                android:drawableLeft="@drawable/ic_usuario"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <EditText
                style="@style/editText_Style"
                android:id="@+id/passwordEditText"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/ic_password"
                android:hint="@string/new_password"
                android:inputType="textPassword"/>

            <EditText
                style="@style/editText_Style"
                android:id="@+id/passwordEditText2"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/ic_password"
                android:hint="@string/confirm_new_password"
                android:inputType="textPassword"/>

            <Button
                style="@style/button_Style"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:text="@string/confirm"
                android:onClick="changepassword"
                android:layout_alignParentBottom="true"
                android:layout_width="335dp"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </ScrollView>



    </RelativeLayout>