<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.fusion_tesis.UI.Actividad_Login">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/imagen_fondo_login"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:paddingTop="80dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    style="@style/appNameStyle"
                    android:fontFamily="sans-serif-medium"
                    android:text="RECOM"/>

                <TextView
                    style="@style/appNameStyle"
                    android:text="app" />

            </LinearLayout>


            <EditText
                style="@style/editText_Style"
                android:id="@+id/userEditText"
                android:drawableLeft="@drawable/ic_usuario"
                android:hint="@string/user"
                android:inputType="text"/>

            <EditText
                style="@style/editText_Style"
                android:id="@+id/passwordEditText"
                android:layout_marginTop="16dp"
                android:drawableLeft="@drawable/ic_password"
                android:hint="@string/password"
                android:inputType="textPassword" />


            <Button
                style="@style/button_Style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50dp"
                android:onClick="goToMenuPrincipal"
                android:text="@string/login"/>

            <TextView
                android:id="@+id/link_to_register"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:onClick="onGotoRegisterActivity"
                android:text="@string/registrate_text"
                android:textColor="#FFFFFF"
                android:textSize="20dp" />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
